--- a/app/views/albums/edit.html.erb
+++ b/app/views/albums/edit.html.erb
@@ -26,12 +26,12 @@
 
 <div class="select-layer">
   <div class="title-bar">
-    <h1 class="title"></h1>
+    <h2 class="title"></h2>
     <span class="cancel">X</span>
   </div>
   <div class="listWrapper">
     <div class="tpl hide">
-      <h1>模板</h1>
+      <h2>模板</h2>
     </div>
     <div class="music hide">
       <% @songs.each_with_index do |song, i| %>
@@ -46,11 +46,31 @@
         <hr/>
       <% end %>
     </div>
-    <div class="pics hide ">
-      <h1>相册</h1>
+    <div class="pics hide">
+      <ul class="th clearing-thumbs small-block-grid-3" data-clearing>
+        <li>
+          <div class="delPhotos">
+            <img src="http://placehold.it/100x100">
+              <a class="delPhoto" href="#">&nbsp;X</a>
+          </div>
+        </li>
+        <li><div class="delPhotos"><img src="http://placehold.it/350x150"><a class="delPhoto" href="javascript:;">X</a></div></li>
+        <li><div class="delPhotos"><img src="http://placehold.it/350x150"><a class="delPhoto" href="javascript:;">X</a></div></li>
+        <li><div class="delPhotos"><img src="http://placehold.it/100x100"><a class="delPhoto" href="javascript:;">X</a></div></li>
+        <li><div class="delPhotos"><img src="http://placehold.it/150x150"><a class="delPhoto" href="javascript:;">X</a></div></li>
+        <li><div class="delPhotos"><img src="http://placehold.it/200x150"><a class="delPhoto" href="javascript:;">X</a></div></li>
+        <li><div class="delPhotos"><img src="http://placehold.it/150x150"><a class="delPhoto" href="javascript:;">X</a></div></li>
+        <li><div class="delPhotos"><img src="http://placehold.it/250x150"><a class="delPhoto" href="javascript:;">X</a></div></li>
+        <li><div class="delPhotos"><img src="http://placehold.it/200x150"><a class="delPhoto" href="javascript:;">X</a></div></li>
+        <li><div class="delPhotos"><img src="http://placehold.it/100x150"><a class="delPhoto" href="javascript:;">X</a></div></li>
+        <li><div class="delPhotos"><img src="http://placehold.it/200x150"><a class="delPhoto" href="javascript:;">X</a></div></li>
+        <li><div class="delPhotos"><img src="http://placehold.it/300x150"><a class="delPhoto" href="javascript:;">X</a></div></li>
+      </ul>
     </div>
     <div class="title hide">
-      <h1>标题</h1>
+      <textarea class="albumTitle large columns" area-invalid="false">itle</textarea>
+      <button type="submit" class="modifyTitle medium button info small">submit</button>
+      <button type="reset" class="resetTitle medium button info small">reset</button>
     </div>
   </div>
 </div>
